# feishu_access_token_MCP

./: README.md  complete_test.py  deployment_test.py  import_test.py  pyproject.toml  requirements.txt  simple_test.py  test_env.py  test_mcp.py
.qoder/rules/: powershell-rule.md
feishu_access_token_MCP/: pyproject.toml
feishu_access_token_MCP/src/feishu_access_token_MCP/: server.py
src/: config.py  main.py
src/feishu_access_token_MCP/: __init__.py
src/services/: token_manager.py
